# Temp4HIFU

./: LICENSE  README  README.md  pyproject.toml  requirements.txt  setup.py
Docs/: component_specs  component_specs.md  component_specs.txt  functional_specs  functional_specs.md  functional_specs.txt  project_plan.txt  sampleScript_loadFunctions.ipynb  sampleScript_loadGUI.ipynb
Temp4HIFU/: calculateBioheat.py  calculateRayleighIntegral.py  startApp.py
Temp4HIFU/test/: test_calculateBioheat.py  test_calculateRayleighIntegral.py  test_program.py  test_setParam.py  test_startApp.ipynb
Temp4HIFU/test/testData/: testData_tempVec.csv  testData_timeVec.csv  testData_z_axis.csv
TempCompliance4HIFU/: calculateBioheat.py  calculateRayleighIntegral.py  setParam.py  startApp.py
TempCompliance4HIFU/sampledata/: df_pressure2D_placeholder.csv
TempCompliance4HIFU/test/: test_bioheat.ipynb  test_calculateBioheat.py  test_calculateRayleighIntegral.py  test_jupyter.ipynb  test_program.py  test_rayleigh.ipynb  test_setParam.py
TempCompliance4HIFU/test/testData/: testData_pressure2D.csv  testData_r_axis.csv
archive/: df_pressure2D.csv  matlab_data_1MHz_2cm_5cm.csv  r_axis.csv  sample_data.csv  z_axis_plchldr.csv
src/: __init__.py  build_gui.py  calculateBioheat.py  calculateRayleighIntegral.py  r_axis_plchldr.csv  sampledashapp.py  setParam.py  settransducer.py  testbioheat.ipynb  testjupyter.ipynb  testrayleigh.ipynb  z_axis.csv
src/presets/: setmedium.py
src/sampledata/: r_axis_placeholder.csv
test/: testbioheat.ipynb  testjupyter.ipynb  testrayleigh.ipynb
