[project]
name = "Temp4HIFU"
version = "0.1.0"
authors = [
  { name="Gerald Lee", email="gerald13@uw.edu" },
]
description = "A Python package designed to estimate the temperature increase due to high intensity focused ultrasound (HIFU) excitation.",
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/C2H5OH-Consumer/Temp4HIFU"